# NUEDC-2023

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nuedc-2023.service
inc/: Camera.h  common.h  cudas.h  ext_funcs.h  ext_types.h  logger.h  mem_map.h  pkg.h
lib/Daheng/win/: DxImageProc.h  GxIAPI.h  GxPixelFormat.h
src/: Camera.cpp  cudas.cu  logger.cpp  main.cpp
